--- a/src/i18n/messages/hi.json
+++ b/src/i18n/messages/hi.json
@@ -24,7 +24,8 @@
     "coming_soon": "और भी उपकरण जल्द आ रहे हैं...",
     "click_sidebar": "बाएं साइडबार मेनू का उपयोग करें",
     "actions": "क्रियाएं",
-    "back_to_home": "होम पर वापस"
+    "back_to_home": "होम पर वापस",
+    "close": "बंद करें"
   },
   "theme": {
     "light": "लाइट",
@@ -1359,6 +1360,121 @@
         "title": "SVG प्लेसहोल्डर जेनरेटर",
         "description": "ऑनलाइन SVG प्लेसहोल्डर इमेज जेनरेशन टूल। त्वरित प्लेसहोल्डर निर्माण के लिए कस्टम आयाम, टेक्स्ट, कलर और टेम्प्लेट स्टाइल का समर्थन करता है।",
         "keywords": "SVG प्लेसहोल्डर,प्लेसहोल्डर जेनरेटर,प्लेसहोल्डर इमेज,इमेज प्लेसहोल्डर,ऑनलाइन टूल"
+      }
+    },
+    "icon-designer": {
+      "name": "लेटर आइकन डिज़ाइनर",
+      "description": "कस्टम कलर के साथ सरल लेटर आइकन डिज़ाइन करें और कई साइज़ में एक्सपोर्ट करें",
+      "settings_title": "आइकन सेटिंग्स",
+      "settings_desc": "अपने लेटर आइकन डिज़ाइन को कस्टमाइज़ करें",
+      "text_label": "आइकन टेक्स्ट",
+      "text_hint": "आइकन के लिए 1-3 अक्षर दर्ज करें",
+      "shape_label": "आइकन आकार",
+      "shapes": {
+        "square": "वर्ग",
+        "circle": "वृत्त",
+        "rounded": "गोल वर्ग",
+        "squircle": "स्क्वर्कल"
+      },
+      "font_size_label": "फ़ॉन्ट साइज़",
+      "font_weight_label": "फ़ॉन्ट वेट",
+      "font_weights": {
+        "normal": "सामान्य",
+        "medium": "मध्यम",
+        "bold": "बोल्ड"
+      },
+      "background_color": "बैकग्राउंड कलर",
+      "text_color": "टेक्स्ट कलर",
+      "preset_colors": "प्रीसेट कलर",
+      "random": "रैंडम",
+      "preview_title": "लाइव प्रीव्यू",
+      "preview_desc": "अपने आइकन डिज़ाइन का रियल-टाइम प्रीव्यू देखें",
+      "preview_size_label": "प्रीव्यू साइज़",
+      "preview_mode_label": "प्रीव्यू मोड",
+      "preview_mode_fit": "व्यू में फ़िट करें",
+      "preview_mode_actual": "वास्तविक साइज़",
+      "actual_size": "वास्तविक साइज़",
+      "scaled_to_fit": "फ़िट करने के लिए स्केल किया गया",
+      "scroll_to_view": "पूर्ण साइज़ देखने के लिए स्क्रॉल करें",
+      "size_preview": "मल्टी-साइज़ प्रीव्यू",
+      "copy_svg": "SVG कॉपी करें",
+      "download_ico": "ICO डाउनलोड करें (मल्टी-साइज़)",
+      "export_title": "एक्सपोर्ट विकल्प",
+      "export_desc": "विभिन्न साइज़ और फ़ॉर्मेट में अपना आइकन डाउनलोड करें",
+      "ico_download_title": "ICO फ़ाइलें डाउनलोड करें (ZIP)",
+      "ico_download_desc": "प्रत्येक चयनित साइज़ एक अलग ICO फ़ाइल, ZIP में पैक",
+      "download_selected_ico": "चयनित साइज़ डाउनलोड करें (ICO)",
+      "download_standard_ico": "मानक साइज़ डाउनलोड करें (ICO)",
+      "standard_ico_desc": "मानक 6 साइज़, 6 ICO फ़ाइलें",
+      "ico_includes": "उत्पन्न करेगा",
+      "ico_files": "ICO फ़ाइलें",
+      "ico_size_too_large": "कृपया ICO के लिए कम से कम एक ≤256px साइज़ चुनें",
+      "individual_sizes": "व्यक्तिगत साइज़ एक्सपोर्ट",
+      "batch_download_all": "सभी साइज़ बैच डाउनलोड करें",
+      "batch_download_all_desc": "एक ZIP फ़ाइल में सभी साइज़ डाउनलोड करें",
+      "download_all_formats": "सभी डाउनलोड करें (SVG + PNG)",
+      "only": "केवल",
+      "zip_includes": "ZIP में शामिल है",
+      "sizes": "साइज़",
+      "formats": "फ़ॉर्मेट",
+      "preview_and_download": "प्रीव्यू और डाउनलोड",
+      "batch_download_selected": "चयनित साइज़ बैच डाउनलोड करें",
+      "batch_download_selected_desc": "केवल चयनित साइज़ को एक ZIP फ़ाइल में डाउनलोड करें",
+      "selected_count": "चयनित",
+      "select_all": "सभी चुनें",
+      "deselect_all": "सभी अचयनित करें",
+      "click_to_select": "चुनने/अचयनित करने के लिए क्लिक करें",
+      "click_to_preview": "वास्तविक साइज़ का प्रीव्यू करने के लिए क्लिक करें",
+      "click_preview": "प्रीव्यू करने के लिए क्लिक करें",
+      "no_size_selected": "कृपया कम से कम एक साइज़ चुनें",
+      "svg_code_title": "SVG कोड",
+      "svg_code_desc": "जेनरेटेड SVG कोड कॉपी और उपयोग करें",
+      "tips_title": "डिज़ाइन टिप्स",
+      "tip1_title": "अक्षर चुनाव",
+      "tip1_desc": "सर्वोत्तम परिणामों के लिए 1-3 अक्षरों का उपयोग करें। यूज़र अवतार या ऐप आइकन के लिए एकल अक्षर बेहतरीन काम करते हैं",
+      "tip2_title": "कलर कंट्रास्ट",
+      "tip2_desc": "बेहतर दृश्यता और पहुंच के लिए टेक्स्ट और बैकग्राउंड कलर के बीच अच्छा कंट्रास्ट सुनिश्चित करें",
+      "tip3_title": "आकार चुनाव",
+      "tip3_desc": "यूज़र अवतार के लिए वृत्त और स्क्वर्कल आकार लोकप्रिय हैं, जबकि ऐप आइकन के लिए गोल वर्ग अच्छे होते हैं",
+      "tip4_title": "बैच डाउनलोड",
+      "tip4_desc": "एक बार में सभी साइज़ प्राप्त करने के लिए बैच डाउनलोड सुविधा का उपयोग करें। फ़ोल्डर में व्यवस्थित SVG और PNG दोनों फ़ॉर्मेट शामिल हैं",
+      "introduction": "लेटर आइकन डिज़ाइनर सरल लेकिन सुरुचिपूर्ण लेटर-आधारित आइकन बनाने के लिए एक पेशेवर टूल है। यूज़र अवतार, ऐप आइकन, ब्रांड लोगो और प्लेसहोल्डर इमेज के लिए उत्तम। टूल अनंत स्केलेबिलिटी, कस्टम कलर, कई आकारों के साथ SVG फ़ॉर्मेट का समर्थन करता है और विभिन्न साइज़ में एक्सपोर्ट कर सकता है। किसी भी डिज़ाइन सॉफ़्टवेयर के बिना सेकंड में पेशेवर दिखने वाले आइकन जेनरेट करें।",
+      "features": [
+        "✏️ कस्टम टेक्स्ट कंटेंट: वैयक्तिकृत आइकन के लिए 1-3 अक्षरों का समर्थन",
+        "🎨 कई आकार विकल्प: वर्ग, वृत्त, गोल वर्ग और स्क्वर्कल आकार",
+        "🌈 पूर्ण कलर कस्टमाइज़ेशन: प्रीसेट पैलेट के साथ बैकग्राउंड और टेक्स्ट कलर की मुफ्त पसंद",
+        "📏 लचीला फ़ॉन्ट नियंत्रण: सही दिखावट के लिए समायोज्य फ़ॉन्ट साइज़ और वेट",
+        "👁️ रियल-टाइम प्रीव्यू: 16px से 128px तक मल्टी-साइज़ आइकन का तत्काल प्रीव्यू",
+        "📦 बैच एक्सपोर्ट: 7 सामान्य साइज़ (16px से 1024px) में वन-क्लिक एक्सपोर्ट",
+        "💾 दोहरा फ़ॉर्मेट समर्थन: आवश्यकतानुसार SVG या PNG फ़ॉर्मेट के रूप में एक्सपोर्ट करें",
+        "🎲 रैंडम कलर जेनरेटर: रैंडम कलर कॉम्बिनेशन के साथ त्वरित प्रेरणा"
+      ],
+      "faq": [
+        {
+          "question": "SVG फ़ॉर्मेट आइकन के क्या फायदे हैं? PNG का उपयोग कब करना चाहिए?",
+          "answer": "SVG आइकन वेक्टर-आधारित हैं, गुणवत्ता हानि के बिना अनंत रूप से स्केल करते हैं, छोटे फ़ाइल साइज़ होते हैं, और CSS स्टाइलिंग का समर्थन करते हैं। वे रेस्पॉन्सिव वेब डिज़ाइन और आधुनिक एप्लिकेशन के लिए आदर्श हैं। जब आपको विशिष्ट आयामों के साथ निश्चित-साइज़ आइकन की आवश्यकता हो या जब आपके लक्ष्य वातावरण में SVG समर्थन सीमित हो तो PNG का उपयोग करें।"
+        },
+        {
+          "question": "अपने आइकन के लिए सही आकार कैसे चुनें?",
+          "answer": "यूज़र अवतार और प्रोफ़ाइल चित्रों के लिए वृत्त और स्क्वर्कल आकार सबसे लोकप्रिय हैं। ऐप आइकन और लोगो के लिए गोल वर्ग अच्छे काम करते हैं। वर्ग आकार अधिक औपचारिक, पेशेवर रूप प्रदान करते हैं। चयन करते समय अपने उपयोग के मामले और ब्रांड शैली पर विचार करें।"
+        },
+        {
+          "question": "विभिन्न उपयोग मामलों के लिए कौन से साइज़ एक्सपोर्ट करने चाहिए?",
+          "answer": "वेब अवतार के लिए: 64px, 128px, 256px। ऐप आइकन के लिए: 128px, 256px, 512px, 1024px। फ़ेविकॉन के लिए: 16px, 32px। सोशल मीडिया के लिए: 256px, 512px। टूल आपको एक साथ सभी सामान्य साइज़ एक्सपोर्ट करने की अनुमति देता है।"
+        },
+        {
+          "question": "पहुंच के लिए अच्छा कलर कंट्रास्ट कैसे सुनिश्चित करें?",
+          "answer": "प्रीसेट कलर कॉम्बिनेशन का उपयोग करें जो अच्छे कंट्रास्ट को ध्यान में रखकर डिज़ाइन किए गए हैं। कस्टम कलर के लिए, टेक्स्ट और बैकग्राउंड के बीच पर्याप्त कंट्रास्ट सुनिश्चित करें। हल्के बैकग्राउंड पर गहरे टेक्स्ट या गहरे बैकग्राउंड पर हल्के टेक्स्ट आमतौर पर सबसे अच्छा काम करते हैं।"
+        },
+        {
+          "question": "क्या मैं जेनरेटेड आइकन का व्यावसायिक उपयोग कर सकता हूं?",
+          "answer": "हां! इस टूल से आप जो भी आइकन बनाते हैं वे आपके हैं और व्यावसायिक उद्देश्यों सहित स्वतंत्र रूप से उपयोग के लिए हैं। कोई वॉटरमार्क, एट्रिब्यूशन आवश्यकताएं या उपयोग प्रतिबंध नहीं हैं।"
+        }
+      ],
+      "meta": {
+        "title": "लेटर आइकन डिज़ाइनर",
+        "description": "ऑनलाइन लेटर आइकन डिज़ाइन टूल। अक्षरों, कलर और आकारों के साथ कस्टम SVG आइकन बनाएं। अवतार, ऐप आइकन और अधिक के लिए कई साइज़ में एक्सपोर्ट करें।",
+        "keywords": "आइकन डिज़ाइनर,लेटर आइकन,अवतार जेनरेटर,आइकन मेकर,SVG आइकन,ऐप आइकन,लोगो मेकर,ऑनलाइन टूल"
       }
     },
     "hmac-generator": {
