--- a/src/i18n/messages/hi.json
+++ b/src/i18n/messages/hi.json
@@ -2026,6 +2026,100 @@
         "description": "ऑनलाइन Base64 इमेज कनवर्शन टूल। वेब डेवलपमेंट और डेटा एम्बेडिंग के लिए इमेज और Base64 एन्कोडिंग के बीच द्विदिशीय कनवर्शन का समर्थन करता है।",
         "keywords": "Base64 कनवर्शन,इमेज एन्कोडिंग,एन्कोडिंग टूल,डिकोडिंग टूल,इमेज कनवर्टर,ऑनलाइन टूल"
       }
+    },
+    "image-to-dot-matrix": {
+      "name": "इमेज से डॉट मैट्रिक्स",
+      "description": "कई शैलियों के साथ डॉट मैट्रिक्स प्रभाव के लिए इमेज कनवर्ट करें",
+      "upload_title": "इमेज अपलोड करें",
+      "upload_desc": "इमेज फ़ाइल चुनें या खींचें और छोड़ें",
+      "settings_title": "डॉट मैट्रिक्स सेटिंग्स",
+      "settings_desc": "डॉट मैट्रिक्स प्रभाव पैरामीटर कस्टमाइज़ करें",
+      "preview_title": "डॉट मैट्रिक्स पूर्वावलोकन",
+      "preview_desc": "डॉट मैट्रिक्स प्रभाव का वास्तविक समय पूर्वावलोकन",
+      "original_preview": "मूल इमेज",
+      "drag_image": "इमेज को यहाँ खींचें और छोड़ें या चुनने के लिए क्लिक करें",
+      "supported_formats": "JPG, PNG, GIF, WebP फॉर्मेट का समर्थन, अधिकतम 10MB",
+      "no_image": "कोई इमेज चयनित नहीं",
+      "image_info": "इमेज जानकारी",
+      "original_size": "मूल आकार",
+      "file_size": "फ़ाइल का आकार",
+      "dot_size_label": "डॉट का आकार",
+      "dot_size_hint": "प्रत्येक डॉट का व्यास (पिक्सेल)",
+      "dot_spacing_label": "डॉट स्पेसिंग",
+      "dot_spacing_hint": "डॉट्स के बीच की जगह",
+      "dot_shape_label": "डॉट आकार",
+      "shape_circle": "वृत्त",
+      "shape_square": "वर्ग",
+      "shape_diamond": "हीरा",
+      "shape_hexagon": "षट्कोण",
+      "color_mode_label": "रंग मोड",
+      "mode_grayscale": "ग्रेस्केल",
+      "mode_blackwhite": "काला और सफ़ेद",
+      "mode_color": "रंग",
+      "threshold_label": "B&W थ्रेशोल्ड",
+      "threshold_hint": "काले और सफेद मोड के लिए ग्रेस्केल थ्रेशोल्ड (0-255)",
+      "invert_label": "रंग पलटें",
+      "background_label": "पृष्ठभूमि रंग",
+      "background_transparent": "पारदर्शी",
+      "background_white": "सफ़ेद",
+      "background_black": "काला",
+      "background_custom": "कस्टम",
+      "processing": "प्रसंस्करण...",
+      "generate_button": "डॉट मैट्रिक्स जनरेट करें",
+      "download_png": "PNG डाउनलोड करें",
+      "download_svg": "SVG डाउनलोड करें",
+      "copy_image": "इमेज कॉपी करें",
+      "reset": "सेटिंग्स रीसेट करें",
+      "image_too_large": "इमेज बहुत बड़ी है, कृपया 10MB से छोटी फ़ाइल चुनें",
+      "invalid_format": "असमर्थित इमेज फॉर्मेट",
+      "generation_failed": "जेनरेशन विफल, कृपया पुनः प्रयास करें",
+      "tips_title": "उपयोग निर्देश",
+      "tip1_title": "डॉट का आकार",
+      "tip1_desc": "छोटे डॉट मान बेहतर प्रभाव उत्पन्न करते हैं लेकिन बड़ी फ़ाइलें। 3-5 पिक्सेल से शुरू करें",
+      "tip2_title": "रंग मोड",
+      "tip2_desc": "ग्रेस्केल प्रकाश और अंधेरे परतें संरक्षित करता है, काला और सफेद उच्च कंट्रास्ट बनाता है, रंग मूल रंग बनाए रखता है",
+      "tip3_title": "डॉट आकार",
+      "tip3_desc": "विभिन्न आकार विभिन्न कलात्मक प्रभाव बनाते हैं। वृत्त सामान्य हैं, वर्ग पिक्सेल कला के अनुकूल हैं, हीरे और षट्कोण रचनात्मक हैं",
+      "tip4_title": "निर्यात प्रारूप",
+      "tip4_desc": "PNG उपयोग के लिए तैयार है, SVG वेक्टर प्रारूप है जो नुकसान के बिना अनंत रूप से स्केल करता है",
+      "introduction": "इमेज से डॉट मैट्रिक्स एक पेशेवर इमेज कलात्मक प्रभाव जनरेटर है जो सामान्य इमेज को अनोखे डॉट मैट्रिक्स शैली की इमेज में परिवर्तित करता है। रेट्रो, आधुनिक, कलात्मक दृश्य प्रभाव बनाने के लिए कई डॉट आकार, रंग मोड और पैरामीटर समायोजन का समर्थन करता है। ग्राफिक डिज़ाइन, पोस्टर निर्माण, वेब डिज़ाइन, प्रिंट सामग्री और अन्य क्षेत्रों में व्यापक रूप से उपयोग किया जाता है, यह डिज़ाइनरों और रचनात्मक कार्यकर्ताओं के लिए एक शक्तिशाली सहायक है।",
+      "features": [
+        "🖼️ JPG, PNG, GIF, WebP कई इमेज फॉर्मेट का समर्थन",
+        "⚙️ लचीला डॉट मैट्रिक्स पैरामीटर: समायोज्य आकार, स्पेसिंग, आकार",
+        "🎨 कई रंग मोड: ग्रेस्केल, काला और सफेद, रंग",
+        "🔷 चार डॉट आकार: वृत्त, वर्ग, हीरा, षट्कोण",
+        "👁️ तत्काल प्रभाव देखने के साथ वास्तविक समय पूर्वावलोकन",
+        "💾 दोहरा प्रारूप निर्यात: PNG बिटमैप और SVG वेक्टर",
+        "🔒 स्थानीय प्रसंस्करण इमेज गोपनीयता और सुरक्षा सुनिश्चित करता है",
+        "⚡ बड़ी इमेज का समर्थन करने वाला उच्च-प्रदर्शन प्रसंस्करण"
+      ],
+      "faq": [
+        {
+          "question": "डॉट मैट्रिक्स इमेज किन परिदृश्यों के लिए उपयुक्त हैं?",
+          "answer": "डॉट मैट्रिक्स इमेज व्यापक रूप से उपयोग की जाती हैं: 1) रेट्रो शैली डिज़ाइन, प्रारंभिक मुद्रण प्रभावों का अनुकरण; 2) आधुनिक कला निर्माण, अनोखे दृश्य प्रभाव उत्पन्न करना; 3) वेब डिज़ाइन पृष्ठभूमि और सजावटी तत्व; 4) पोस्टर और प्रिंट डिज़ाइन; 5) ब्रांड दृश्य पहचान प्रणाली; 6) डिजिटल कला और NFT निर्माण। डॉट मैट्रिक्स प्रभाव सामान्य इमेज को एक अनोखी कलात्मक और तकनीकी अनुभूति दे सकते हैं।"
+        },
+        {
+          "question": "उचित डॉट आकार और स्पेसिंग कैसे चुनें?",
+          "answer": "डॉट आकार और स्पेसिंग का चयन उपयोग परिदृश्य पर निर्भर करता है: छोटी इमेज को छोटे डॉट (2-4 पिक्सेल) का उपयोग करना चाहिए, बड़ी इमेज बड़े डॉट (5-10 पिक्सेल) का उपयोग कर सकती हैं। बड़ी स्पेसिंग इमेज को अधिक अमूर्त बनाती है; छोटी स्पेसिंग अधिक विवरण संरक्षित करती है। डिफ़ॉल्ट मानों से शुरू करने और परिणामों के आधार पर ठीक-ट्यूनिंग की अनुशंसा की जाती है। प्रिंट आउटपुट के लिए, अधिक विवरण बनाए रखने के लिए छोटे डॉट का उपयोग करें।"
+        },
+        {
+          "question": "रंग मोड के बीच क्या अंतर हैं?",
+          "answer": "तीन रंग मोड की प्रत्येक विशेषताएँ हैं: 1) ग्रेस्केल मोड इमेज प्रकाश और अंधेरे स्तरों को संरक्षित करता है, समृद्ध विवरण की आवश्यकता वाले दृश्यों के लिए उपयुक्त; 2) काला और सफेद मोड में केवल शुद्ध काला और शुद्ध सफेद होता है, उच्च कंट्रास्ट प्रभाव उत्पन्न करता है, सरल शैलियों और लोगो डिज़ाइन के लिए उपयुक्त; 3) रंग मोड मूल इमेज रंग संरक्षित करता है, कलात्मक निर्माण और रंग मुद्रण के लिए उपयुक्त। चुनते समय अंतिम उपयोग और दृश्य आवश्यकताओं पर विचार करें।"
+        },
+        {
+          "question": "PNG और SVG प्रारूपों के बीच कैसे चुनें?",
+          "answer": "PNG एक बिटमैप प्रारूप है, सीधे उपयोग और साझा करने के लिए उपयुक्त, बड़ी फ़ाइलें लेकिन अच्छी संगतता, वेब प्रदर्शन, सोशल मीडिया आदि के लिए उपयुक्त। SVG एक वेक्टर प्रारूप है जो नुकसान के बिना अनंत रूप से स्केल कर सकता है, आमतौर पर छोटी फ़ाइलें, स्केलिंग की आवश्यकता वाले परिदृश्यों जैसे प्रिंटिंग, लोगो, आइकन डिज़ाइन के लिए उपयुक्त। यदि आपको पोस्ट-संपादन या महत्वपूर्ण स्केलिंग की आवश्यकता है, तो SVG चुनें; यदि आपको त्वरित उपयोग और साझाकरण की आवश्यकता है, तो PNG चुनें।"
+        },
+        {
+          "question": "बड़ी इमेज को प्रोसेस करते समय प्रदर्शन कैसा है?",
+          "answer": "टूल प्रदर्शन-अनुकूलित है और बड़ी इमेज को आसानी से संभाल सकता है। सर्वोत्तम अनुभव के लिए 10MB से कम इमेज की अनुशंसा की जाती है। बहुत बड़ी इमेज के लिए, प्रसंस्करण गति सुनिश्चित करने के लिए डॉट आकार स्वचालित रूप से समायोजित किया जाता है। सभी प्रसंस्करण ब्राउज़र में स्थानीय रूप से किया जाता है, सर्वर पर अपलोड नहीं किया जाता, इमेज सुरक्षा सुनिश्चित करता है। यदि आप प्रदर्शन समस्याओं का सामना करते हैं, तो पहले इमेज का आकार बदलने या डॉट आकार बढ़ाने पर विचार करें।"
+        }
+      ],
+      "meta": {
+        "title": "इमेज से डॉट मैट्रिक्स टूल",
+        "description": "ऑनलाइन इमेज से डॉट मैट्रिक्स कनवर्शन टूल। कई डॉट आकार और रंग मोड का समर्थन, डिज़ाइन और रचनात्मक परियोजनाओं के लिए अनोखे डॉट मैट्रिक्स कलात्मक प्रभाव जेनरेट करता है।",
+        "keywords": "डॉट मैट्रिक्स,इमेज कनवर्शन,कलात्मक प्रभाव,पिक्सेल कला,इमेज प्रोसेसिंग,ऑनलाइन टूल"
+      }
     }
   },
   "seo": {
