--- a/src/i18n/messages/zh.json
+++ b/src/i18n/messages/zh.json
@@ -2026,6 +2026,100 @@
         "description": "在线Base64图片转换工具。支持图片与Base64编码的双向转换，适用于Web开发和数据嵌入。",
         "keywords": "Base64转换,图片编码,编码工具,解码工具,图片转换,在线工具"
       }
+    },
+    "image-to-dot-matrix": {
+      "name": "图片转点阵图",
+      "description": "将图片转换为点阵图效果，支持多种风格",
+      "upload_title": "上传图片",
+      "upload_desc": "选择或拖拽图片文件",
+      "settings_title": "点阵设置",
+      "settings_desc": "自定义点阵效果参数",
+      "preview_title": "点阵预览",
+      "preview_desc": "实时预览点阵效果",
+      "original_preview": "原始图片",
+      "drag_image": "拖拽图片到此处或点击选择",
+      "supported_formats": "支持 JPG、PNG、GIF、WebP 格式，最大 10MB",
+      "no_image": "未选择图片",
+      "image_info": "图片信息",
+      "original_size": "原始尺寸",
+      "file_size": "文件大小",
+      "dot_size_label": "点大小",
+      "dot_size_hint": "点的直径大小（像素）",
+      "dot_spacing_label": "点间距",
+      "dot_spacing_hint": "点之间的间距",
+      "dot_shape_label": "点形状",
+      "shape_circle": "圆形",
+      "shape_square": "方形",
+      "shape_diamond": "菱形",
+      "shape_hexagon": "六边形",
+      "color_mode_label": "颜色模式",
+      "mode_grayscale": "灰度",
+      "mode_blackwhite": "黑白",
+      "mode_color": "彩色",
+      "threshold_label": "黑白阈值",
+      "threshold_hint": "黑白模式下的灰度阈值（0-255）",
+      "invert_label": "反转颜色",
+      "background_label": "背景颜色",
+      "background_transparent": "透明",
+      "background_white": "白色",
+      "background_black": "黑色",
+      "background_custom": "自定义",
+      "processing": "处理中...",
+      "generate_button": "生成点阵图",
+      "download_png": "下载 PNG",
+      "download_svg": "下载 SVG",
+      "copy_image": "复制图片",
+      "reset": "重置设置",
+      "image_too_large": "图片过大，请选择小于 10MB 的文件",
+      "invalid_format": "不支持的图片格式",
+      "generation_failed": "生成失败，请重试",
+      "tips_title": "使用说明",
+      "tip1_title": "点大小",
+      "tip1_desc": "较小的点值产生更精细的效果，但文件会更大。建议从 3-5 像素开始尝试",
+      "tip2_title": "颜色模式",
+      "tip2_desc": "灰度模式保留明暗层次，黑白模式产生高对比效果，彩色模式保留原色",
+      "tip3_title": "点形状",
+      "tip3_desc": "不同形状产生不同艺术效果。圆形最常见，方形适合像素风，菱形和六边形更有创意",
+      "tip4_title": "导出格式",
+      "tip4_desc": "PNG 适合直接使用，SVG 是矢量格式可无限放大不失真",
+      "introduction": "图片转点阵图工具是专业的图片艺术效果生成器，将普通图片转换为独特的点阵风格图像。支持多种点的形状、颜色模式和参数调整，可以创造出复古、现代、艺术等多种视觉效果。广泛应用于平面设计、海报制作、网页设计、印刷品等领域，是设计师和创意工作者的得力助手。",
+      "features": [
+        "🖼️ 支持 JPG、PNG、GIF、WebP 多种图片格式",
+        "⚙️ 灵活的点阵参数：大小、间距、形状可调",
+        "🎨 多种颜色模式：灰度、黑白、彩色",
+        "🔷 四种点形状：圆形、方形、菱形、六边形",
+        "👁️ 实时预览，即时查看效果",
+        "💾 双格式导出：PNG 位图和 SVG 矢量图",
+        "🔒 本地处理，确保图片隐私安全",
+        "⚡ 高性能处理，支持大尺寸图片"
+      ],
+      "faq": [
+        {
+          "question": "点阵图适用于哪些场景？",
+          "answer": "点阵图广泛应用于：1）复古风格设计，模拟早期印刷效果；2）现代艺术创作，产生独特视觉效果；3）网页设计背景和装饰元素；4）海报和印刷品设计；5）品牌视觉识别系统；6）数字艺术和NFT创作。点阵效果能让普通图片呈现独特的艺术感和科技感。"
+        },
+        {
+          "question": "如何选择合适的点大小和间距？",
+          "answer": "点大小和间距的选择取决于使用场景：小尺寸图片建议使用较小的点（2-4像素），大尺寸图片可以使用更大的点（5-10像素）。间距越大，图片越抽象；间距越小，细节越清晰。建议先用默认值生成，再根据效果微调。对于打印输出，可以使用更小的点以保留更多细节。"
+        },
+        {
+          "question": "不同颜色模式有什么区别？",
+          "answer": "三种颜色模式各有特点：1）灰度模式保留图片的明暗层次，适合需要丰富细节的场景；2）黑白模式只有纯黑和纯白两色，产生高对比效果，适合简洁风格和logo设计；3）彩色模式保留原图颜色，适合艺术创作和彩色印刷。选择时考虑最终用途和视觉需求。"
+        },
+        {
+          "question": "PNG 和 SVG 格式应该如何选择？",
+          "answer": "PNG 是位图格式，适合直接使用和分享，文件较大但兼容性好，适用于网页显示、社交媒体等。SVG 是矢量格式，可以无限放大不失真，文件通常更小，适合需要缩放的场景如打印、logo、图标设计。如果需要后期编辑或大幅缩放，建议选择 SVG；如果需要快速使用和分享，选择 PNG。"
+        },
+        {
+          "question": "处理大图片时性能如何？",
+          "answer": "工具经过性能优化，可以流畅处理大尺寸图片。建议图片不超过10MB以确保最佳体验。对于超大图片，点大小会自动调整以保证处理速度。所有处理都在浏览器本地完成，不会上传到服务器，确保图片安全。如果遇到性能问题，可以先缩小图片尺寸或增大点的大小。"
+        }
+      ],
+      "meta": {
+        "title": "图片转点阵图工具",
+        "description": "在线图片转点阵图工具。支持多种点形状、颜色模式，生成独特的点阵艺术效果，适用于设计和创意项目。",
+        "keywords": "点阵图,图片转换,艺术效果,像素艺术,图片处理,在线工具"
+      }
     }
   },
   "seo": {
